/*
 * @Copyright 2018-2025 HardBackNutter
 * @License GNU General Public License
 *
 * This file is part of NeverTooManyBooks.
 *
 * NeverTooManyBooks is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * NeverTooManyBooks is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 * See the GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
 */
//file:noinspection LongLine

plugins {
    alias libs.plugins.android.library
    alias libs.plugins.android.kotlin
    alias libs.plugins.mannodermaus.junit5
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(rootProject.ext.toolChain)
    }
}

kotlin {
    jvmToolchain rootProject.ext.toolChain
}

android {
    namespace = "com.hardbacknutter.nevertoomanybooks.core"
    compileSdk = rootProject.ext.compileSdkVersion

    defaultConfig {
        minSdk = rootProject.ext.minSdkVersion
        targetSdk = rootProject.ext.targetSdkVersion

        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
        testInstrumentationRunnerArguments["runnerBuilder"] =
                "de.mannodermaus.junit5.AndroidJUnit5Builder"
    }

    buildTypes {
        release {
            minifyEnabled = true
            proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"),
                    "proguard-rules.pro")
        }
        beta {
            minifyEnabled false
        }
        debug {
            minifyEnabled false
        }
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11

        // https://developer.android.com/studio/releases/#4-0-0-desugar
        coreLibraryDesugaringEnabled = true
    }

    kotlinOptions {
        jvmTarget = 11
    }

    buildFeatures {
        buildConfig = true
    }

    testOptions {
        unitTests {
            includeAndroidResources = true
            // Can be enabled to make Log.x work. OR, use Logger.x
            returnDefaultValues = false
            all {
                reports {
                    junitXml.required.set(true)
                    html.required.set(false)
                }
            }
        }
    }

    lint {
        // allow command line builds to complete
        abortOnError = false
    }
}

dependencies {
    implementation project(path: ":Logger")

    coreLibraryDesugaring(libs.google.desugar)

    implementation(libs.androidx.appcompat)
    implementation(libs.androidx.constraintlayout.core)
    implementation(libs.androidx.documentfile)
    implementation(libs.androidx.preference)
    implementation(libs.androidx.recyclerview)
    implementation(libs.androidx.window)

    implementation(libs.google.material)

    implementation(libs.kotlinx.coroutines.android)

    testImplementation(libs.mockito.core)
    testImplementation(libs.mockito.junit.jupiter)

    testRuntimeOnly(libs.junit.jupiter.engine)
    testImplementation(libs.junit.jupiter.api)
    testImplementation(libs.junit.jupiter.params)

    androidTestImplementation(libs.junit.jupiter.api)
    androidTestImplementation(libs.mannodermaus.android.test.core)
    androidTestRuntimeOnly(libs.mannodermaus.android.test.runner)

    androidTestImplementation(libs.androidx.test.core)
    androidTestImplementation(libs.androidx.test.runner)
    androidTestImplementation(libs.androidx.test.rules)
}